TextWriter 3 lines, using CRLF as line deliminator.

--- a/GhostWriter/App.config
+++ b/GhostWriter/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="GhostWriter.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="GhostWriter.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <GhostWriter.Settings>
+            <setting name="NumLines" serializeAs="String">
+                <value>3</value>
+            </setting>
+        </GhostWriter.Settings>
+        <GhostWriter.Settings1>
+            <setting name="numLines" serializeAs="String">
+                <value>3</value>
+            </setting>
+        </GhostWriter.Settings1>
+    </applicationSettings>
 </configuration>
